--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-# Datasource
-spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.username=root
-spring.datasource.password=Root@123
-spring.datasource.driver-class-name=org.h2.Driver
+## H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+## Datasource
+#spring.datasource.url=jdbc:h2:file:~/test
+#spring.datasource.username=root
+#spring.datasource.password=Root@123
+#spring.datasource.driver-class-name=org.h2.Driver
+#Local MongoDB config
+server.port=8090
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.data.mongodb.host=localhost
+spring.data.mongodb.database=User
+#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
